@@ -72,6 +72,7 @@
     <File name="EngineAssistant.cs" subtype="Code" buildaction="Compile" />
     <File name="smuxi-frontend-gnome.exe.config" subtype="Code" buildaction="FileCopy" />
     <File name="ColorTools.cs" subtype="Code" buildaction="Compile" />
+    <File name="../../po-Frontend-GNOME/de.po" subtype="Code" buildaction="Nothing" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="Engine" />
