@@ -1,3 +1,8 @@
+2008-08-24  Mirco Bauer <meebey@meebey.net> 
+
+	* Protocols/Irc/IrcProtocolManager.cs: Kill threads we started when
+	  disconnecting.
+
 2008-08-21  Mirco Bauer <meebey@meebey.net> 
 
 	* Protocols/Irc/IrcProtocolManager.cs: Dispose all chats after quitting in
